# sntp_client

./: CMakeLists.txt  client-sntp.c  client-sntp.h  x_sntp_client.c  x_sntp_client.h
